--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
-div{
-    background-color: aquamarine;
+*{
+   
+    
+}
+.login{
+    margin-left: ;
+    padding: 10px;
+    text-align: left;
+    background-color: orangered;
+    box-shadow:10px 10px rgb(148, 95, 74);
+    width: min-content;
 }
